editor-components/feature/feature49/feature49.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
    .max-content {
        display: flex;
        flex-direction: column;
        gap: var(--composer-gap-lg);

        .text-content {

            .subtitle,
            .title,
            .description {
                content: "";
            }
        }

        .button-container {
            display: flex;
            flex-direction: row;
            justify-content: center;
            gap: var(--composer-gap-sm);

            .button {
                content: "";

                .button-text {
                    content: "";
                }
            }
        }

        .cards-container {
            gap: var(--composer-gap-lg);

            .card {
                display: flex;
                flex-direction: column;
                justify-content: flex-start;
                gap: var(--composer-gap-md);
                padding: var(--composer-gap-lg);
                border-radius: var(--composer-border-radius-md);
                box-shadow: var(--box-shadow-active);
                height: 100%;
                width: 100%;

                &.only-button {
                    gap: 0;
                    padding-top: 0;
                }

                .card-button {
                    content: "";

                    .card-button-text {
                        content: "";
                    }
                }

                .card-content {

                    .card-title,
                    .card-description {
                        color: var(--composer-font-color-primary);
                        text-align: left !important;
                    }
                }

                .icon-container {
                    width: 80px;
                    height: 80px;
                    border-radius: 50%;
                    display: flex;
                    align-items: center;
                    justify-content: center;

                    &.with-background {
                        background-color: var(--composer-primary-color);

                        .card-icon {
                            color: white;
                        }
                    }

                    &:not(.with-background) {
                        .card-icon {
                            color: var(--composer-primary-color);
                        }
                    }

                    .card-icon {
                        font-size: 2.5rem;
                        width: 2.5rem;
                        height: 2.5rem;
                        display: flex;
                        align-items: center;
                        justify-content: center;
                        object-fit: contain;
                    }
                }
            }
        }


    }
}

@container (max-width: #{$composer-tablet-width}) {
    .container {
        .max-content {
            gap: var(--composer-gap-md);

            .cards-container {
                .card {
                    .icon-container {
                        width: 70px;
                        height: 70px;

                        .card-icon {
                            font-size: 2rem;
                            width: 2rem;
                            height: 2rem;
                        }
                    }
                }
            }
        }
    }
}

@container (max-width: #{$composer-phone-width}) {
    .container {
        .max-content {
            .cards-container {
                .card {
                    .icon-container {
                        width: 60px;
                        height: 60px;

                        .card-icon {
                            font-size: 1.75rem;
                            width: 1.75rem;
                            height: 1.75rem;
                        }
                    }
                }
            }
        }
    }
}

